assert(_handle_mark_nesting > 1) failed: memory leak: allocating handle outside HandleMark

XMLWordPrintable

    • b12

        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0xccd0cc] HandleArea::allocate_handle(oop)+0x1dc
        V [libjvm.so+0x14122b3] CautiouslyPreserveExceptionMark::CautiouslyPreserveExceptionMark(Thread*)+0xc3
        V [libjvm.so+0xccf2cb] HandshakeState::process_self_inner(JavaThread*)+0xcb
        V [libjvm.so+0x14cae2b] SafepointMechanism::block_if_requested_slow(JavaThread*)+0x5b
        V [libjvm.so+0x1645940] JavaThread::check_safepoint_and_suspend_for_native_trans(JavaThread*)+0x240
        V [libjvm.so+0xe777ac] ThreadStateTransition::transition_from_native(JavaThread*, JavaThreadState) [clone .constprop.239]+0x8c
        V [libjvm.so+0xe7b6b5] jni_ExceptionOccurred+0xb5
        C [jni010+0x223d]
        C [jni010+0x1259]

              Assignee:
              Robbin Ehn
              Reporter:
              Dean Long
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: