8220173: assert(_handle_mark_nesting > 1) failed: memory leak: allocating handle outside HandleMark

Reviewed-by: dcubed, redestad